--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 
+db/*
+incremental_db/*
+output_files/*
+simulation/modelsim/*
+*.vhd.bak
+*.rpt
+
 */db/*
 */incremental_db/*
 */output_files/*
 */simulation/modelsim/*
-*.vhd.bak
-*.rpt
 
-
-
+*.qsf
+*.qws
