--- a/sqrt.qsf
+++ b/sqrt.qsf
@@ -51,6 +51,7 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulati
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE sqrt_tb.vhd
 set_global_assignment -name VHDL_FILE diferentezero.vhd
 set_global_assignment -name VHDL_FILE sqrt_bo.vhd
 set_global_assignment -name VHDL_FILE sqrt_bc.vhd
